# wmcoincoin

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  configure  configure.ac  configure.in  genoptlst.sh  mkinstalldirs  options  useragents  wmccc.glade  wmcoincoin.spec  wmpanpan
doc/: Makefile.in
platypus/: Makefile.am  wmcoincoin_player.c
po/: POTFILES.in  fr.po  wmcoincoin.pot
scripts/: Makefile.am  wmcoincoin-totoz-get
src/: Makefile.am  Makefile.in  balloon.c  balltrap.c  balltrap.h  base64.c  board.c  board_pop3.c  board_priv.h  board_rss.c  board_util.c  board_util.h  cc_queue.c  coin_util.c  coin_util.h  coin_xutil.c  coin_xutil.h  coincoin.h  coincoin_news.c  coincoin_prefs.c  coincoin_prefs.h  coincoin_tribune.c  comments.c  config.h.in  defaultoptionsfile.h  defaultrcfile.h  dock.c  dock.h  editwin.c  fake-getaddrinfo.h  fontcoincoin.c  fontcoincoin.h  general.h  global.h  http.c  http.h  http_unix.c  http_win.c  inet_aton.c  kbcoincoin.c  (+51 more)
xpms/: coin.xpm  editwin_minib.xcf  editwin_minib.xpm  fleche.xpm  pp_minib.xpm  totoz.xcf
