dnl
dnl autoconf input for wmCoinCoin
dnl rcsid=$id$
dnl ChangeLog: 
dnl   $Log: configure.ac,v $
dnl   Revision 1.12  2002/12/20 11:26:35  pouaite
dnl   deux trois conneries
dnl
dnl   Revision 1.11  2002/11/30 00:10:38  pouaite
dnl   2.4.2a
dnl
dnl   Revision 1.10  2002/10/16 20:41:44  pouaite
dnl   killall toto
dnl
dnl   Revision 1.9  2002/10/05 18:08:13  pouaite
dnl   ajout menu contextuel + fix de la coloration des boutons du wmccc
dnl
dnl   Revision 1.8  2002/09/22 23:16:33  pouaite
dnl   i had a friend, but he does not move anymore
dnl
dnl   Revision 1.7  2002/09/08 18:44:07  pouaite
dnl   mouaissssss
dnl
dnl   Revision 1.6  2002/09/08 18:21:25  pouaite
dnl   microfix pou cygwin + compil
dnl
dnl   Revision 1.5  2002/09/08 14:28:44  pouaite
dnl   bugfixes salutaires
dnl
dnl   Revision 1.4  2002/09/07 16:21:15  pouaite
dnl   ça va releaser en douce
dnl
dnl   Revision 1.3  2002/09/03 22:42:17  pouaite
dnl   coin
dnl
dnl   Revision 1.2  2002/08/31 21:26:46  pouaite
dnl   ajout du wmccc
dnl
dnl   Revision 1.1  2002/08/22 20:04:16  pouaite
dnl   fin de la premiere manche contre gettextize
dnl
dnl   Revision 1.30  2002/08/18 19:00:27  pouaite
dnl   plop
dnl
dnl   Revision 1.29  2002/08/17 18:33:37  pouaite
dnl   grosse commition
dnl
dnl   Revision 1.28  2002/06/26 22:19:48  pouaite
dnl   ptit fix pour la tribune de f-cpu + patch de lordoric
dnl
dnl   Revision 1.27  2002/06/23 14:01:36  pouaite
dnl   ouups, j'avais flingué les modifs depuis la v2.3.8b
dnl
dnl   Revision 1.26  2002/06/23 10:44:05  pouaite
dnl   i18n-isation of the coincoin(kwakkwak), thanks to the incredible jjb !
dnl
dnl   Revision 1.24  2002/06/02 12:37:36  pouaite
dnl   fix gethostbyname --> version 2.3.8b
dnl
dnl   Revision 1.23  2002/06/01 20:21:18  pouaite
dnl   version 2.3.8a
dnl
dnl   Revision 1.22  2002/06/01 17:54:04  pouaite
dnl   nettoyage
dnl
dnl   Revision 1.21  2002/05/29 22:38:12  pouaite
dnl   bidouilles dans configure.in et cie
dnl
dnl   Revision 1.20  2002/05/13 10:51:46  pouaite
dnl   bugfix lecture xpm
dnl
dnl   Revision 1.19  2002/04/26 23:25:38  pouaite
dnl   v2.3.7b
dnl
dnl   Revision 1.18  2002/04/23 23:16:29  pouaite
dnl   \o/ j'ai enfin réussi à chopper le bug mysterieux de l'autoscroll du pinni \o/
dnl
dnl   Revision 1.17  2002/04/14 23:24:21  pouaite
dnl   re-fix pour kde ..
dnl
dnl   Revision 1.16  2002/04/09 00:28:19  pouaite
dnl   quelques modifs faites dans un état d'hébétude avancé /!\ travaux en cours /!\
dnl
dnl   Revision 1.15  2002/03/18 22:46:49  pouaite
dnl   1 ou 2 bugfix mineurs, et surtout suppression de la dependance avec la libXpm .. un premier pas vers wmc² en 8bits
dnl
dnl   Revision 1.14  2002/03/10 16:07:10  pouaite
dnl   pseudo transp basique dans le pinnipede (en cours..)
dnl
dnl   Revision 1.13  2002/03/09 19:45:52  pouaite
dnl   microbugfix du plopifieur et ajout d'une macro PATCH_LEVEL
dnl
dnl   Revision 1.12  2002/03/08 23:53:40  pouaite
dnl   derniers bugfixes pour la v2.3.6
dnl
dnl   Revision 1.11  2002/03/05 21:04:28  pouaite
dnl   bugfixes suite à l'upgrade de dlfp [et retour au comportement à l'ancienne du clic sur les horloges pour les moules ronchonnes]
dnl
dnl   Revision 1.10  2002/02/24 22:13:56  pouaite
dnl   modifs pour la v2.3.5 (selection, scrollcoin, plopification, bugfixes)
dnl
dnl   Revision 1.9  2002/01/30 21:03:45  pouaite
dnl   correction du bug du au signe des char, et d'un petit bug dans les reference d'horloges
dnl
dnl   Revision 1.8  2002/01/20 20:53:22  pouaite
dnl   bugfix configure.in && http_win.c pour cygwin + 2-3 petis trucs
dnl
dnl   Revision 1.7  2002/01/13 20:38:31  pouaite
dnl   fix du configure.in qui detecte cygwin a tors et à travers avec les v. recentes de autoconf
dnl
dnl   Revision 1.6  2002/01/10 09:03:07  pouaite
dnl   integration du patch de glandium (requetes http/1.1 avec header 'If-Modified-Since' --> coincoin plus gentil avec dacode)
dnl
dnl   Revision 1.5  2002/01/03 22:15:31  pouaite
dnl   patch top moumoute de glandium pour la gestion du wiki
dnl
dnl   Revision 1.4  2001/12/17 18:11:07  pouaite
dnl   attention chérie ça va releaser
dnl
dnl   Revision 1.3  2001/12/16 01:43:33  pouaite
dnl   filtrage des posts, meilleure gestion des posts multiples
dnl
dnl   Revision 1.2  2001/12/02 18:32:05  pouaite
dnl   update suite à la modif sur http.c et a la generation automatique de src/default*.h
dnl

AC_INIT(wmcoincoin, 2.4.2cvs, c0in@altern.org)
AC_CONFIG_SRCDIR([src/wmcoincoin.c])

AC_PREREQ(2.52)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

dnl Checks for host/os name
dnl =======================
AC_CANONICAL_HOST
COIN_ARCH="${host_cpu}-${host_vendor}-${host_os}"
AC_SUBST(COIN_ARCH)
case $host_os in
  *cygwin* ) CYGWIN=yes;;
         * ) CYGWIN=no;;
esac

dnl internationalization macros
ALL_LINGUAS="fr"
AM_GNU_GETTEXT
AM_GNU_GETTEXT_VERSION(0.11.2)



dnl Checks for programs.
dnl ===================
AC_PROG_CC
AC_ISC_POSIX


dnl don't want the -g flag
CFLAGS=`echo "x $CFLAGS"|sed 's/^x //; s/\(^\| \)-g\($\| \)/ /g'`

dnl additional compile flags when using gcc
if test x$GCC = xyes; then
  CFLAGS="$CFLAGS -Wall -W -fsigned-char";
else
  echo "Vous n'utilisez pas gcc .. attention coincoin peut avoir quelque bugs si les char ne sont pas signés"
fi

YELLOW="\\033\\1331;33m"
RESET="\\033\\1330m"


AC_PATH_X
AC_PATH_XTRA
echo x_cflags=$X_CFLAGS libs=$LIBS pre_lib=$X_PRE_LIBS x_libs=$X_LIBS x_extra=$X_EXTRA_LIBS
dnl AC_CHECK_LIB(Xpm, XpmCreatePixmapFromData,,
dnl  AC_MSG_ERROR(The XPM library is required but wasn't found.),
dnl  $X_LIBS -lX11 -lXext)

LIBS="${X_PRE_LIBS} ${X_LIBS} -lX11 -lXext ${LIBS} ${X_EXTRA_LIBS}"
CFLAGS="$CFLAGS $X_CFLAGS"


build_wmccc="yes"
AC_ARG_ENABLE(wmccc,
 [  --enable-wmccc        Builds the wmccc (requires gtk-1.2), the graphical wmcoincoin configuration tool (Default is yes)
  --disable-wmccc         Do not build wmccc],
 [ if   test "x$enableval" = "xno" ; then
	build_wmccc="no"
	echo you disabled wmccc
   fi
 ], [build_wmccc="yes"])

if test "x$build_wmccc" = "xno"; then
  echo wmccc disabled...
  WMCCC=""
else
  echo building with WMCCC, checking for gtk..
dnl si le test sur gtk ne passe pas (solaris... ?), il suffit de comment la ligne am_path_gtk et de decommenter les 4 lignes suivantes
dnl GTK_CFLAGS="`gtk-config --cflags`"
dnl GTK_LIBS="`gtk-config --libs`"
dnl AC_SUBST(GTK_CFLAGS)
dnl AC_SUBST(GTK_LIBS)

  AM_PATH_GTK(1.2.0, , AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path? If you dont have gtk you wont be able to build the wmccc try running configure with --disable-wmccc))
  WMCCC="wmccc"
fi
AC_SUBST(WMCCC)

dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${datadir}" = 'x${prefix}/share'; then
  if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${ac_default_prefix}/share/${PACKAGE}")
  else
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${prefix}/share/${PACKAGE}")
  fi
else
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${datadir}/${PACKAGE}")
fi

dnl Set PACKAGE_SOURCE_DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")



dnl Checks for library functions.
dnl ============================
AC_FUNC_VPRINTF
AC_CHECK_HEADERS(string.h stdarg.h unistd.h sys/time.h utime.h sys/utime.h)
AC_CHECK_HEADERS(sys/select.h sys/utsname.h pwd.h signal.h windows.h)
AC_HEADER_TIME
AC_CHECK_FUNCS(strdup strstr strcasecmp strncasecmp)
AC_CHECK_FUNCS(strerror snprintf vsnprintf select signal)
AC_CHECK_FUNCS(uname gethostname)

AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

YELLOW="\\033\\1331;33m"
RESET="\\033\\1330m"

AC_ARG_WITH(ipv6, [ --with-ipv6    allow use of ipv6 [default=no]], ipv6_ok=$withval, ipv6_ok=no)
if test "x$ipv6_ok" = "xyes"; then
  echo "IPv6 enabled !"
  AC_DEFINE_UNQUOTED(USE_IPV6, 1, [Define if build with IPv6 support])
fi

case "$host" in
    *-linux-*)
          echo -e "\n${YELLOW}you are using GNU/linux, it's Good(c)(tm) !${RESET}\n"
          ;;
    *-solaris*)
          echo -e "\n${YELLOW}oh oh !! wmcc runs quite well on solaris, good luck !${RESET}\n"
          ;;
    *bsd*)
          echo -e "\nbsd detected!\n"
	  ;;
    *-cygwin*)
	  echo -e "\n${YELLOW}cygwin detected !, may the force be with you, young mussel${RESET}\n"
     	  AC_CHECK_LIB(wsock32,select)
	  dnl correct a bug in cygwin: incorrect regex included in -lm
	  LIBS="`echo ${LIBS} | sed -e 's/-lm//'`"
	  LIBS="${LIBS} /lib/libregex.a -lm"        
	  ;;
    *-darwin*)
          echo -e "\n${YELLOW}darwin detected, vilain macounet !${RESET}\n"
          ;;
    *GNU*)
	  echo -e "\n${YELLOW}GNU/Hurd ! you need to shave yourself${RESET}\n"
	  ;;
    *)
	  echo -e "\n${YELLOW}you are compiling on $host , it's original${RESET}\n"
         ;;
esac

AC_CONFIG_FILES([Makefile doc/Makefile intl/Makefile po/Makefile.in m4/Makefile src/Makefile])
AC_CONFIG_COMMANDS([default],[[ echo timestamp > stamp-h ]],[[]])
AC_OUTPUT

if test "x$build_wmccc" = "xno"; then
  echo "    I recall you that you choosed to disable wmccc"
else
  echo "    wmcc will be built with wmccc"
fi
