dnl
dnl autoconf input for wmCoinCoin
dnl rcsid=$id$
dnl ChangeLog: 
dnl   $Log: configure.in,v $
dnl   Revision 1.3  2001/12/16 01:43:33  pouaite
dnl   filtrage des posts, meilleure gestion des posts multiples
dnl
dnl   Revision 1.2  2001/12/02 18:32:05  pouaite
dnl   update suite à la modif sur http.c et a la generation automatique de src/default*.h
dnl

AC_INIT(src/wmcoincoin.c)

AM_INIT_AUTOMAKE(wmcoincoin, 2.3.2)
AM_CONFIG_HEADER(src/config.h)

dnl Checks for host/os name
dnl =======================
AC_CANONICAL_HOST
COIN_ARCH="${host_cpu}-${host_vendor}-${host_os}"
AC_SUBST(COIN_ARCH)

dnl Checks for programs.
dnl ===================
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl don't want the -g flag
CFLAGS=`echo "x $CFLAGS"|sed 's/^x //; s/\(^\| \)-g\($\| \)/ /g'`

dnl additional compile flags when using gcc
if test x$GCC = xyes; then
  CFLAGS="$CFLAGS -Wall -W"
fi

AC_PATH_X
AC_PATH_XTRA
echo x_cflags=$X_CFLAGS libs=$LIBS pre_lib=$X_PRE_LIBS x_libs=$X_LIBS x_extra=$X_EXTRA_LIBS
AC_CHECK_LIB(Xpm, XpmCreatePixmapFromData,,
  AC_MSG_ERROR(The XPM library is required but wasn't found.),
  $X_LIBS -lX11 -lXext)

LIBS="${X_PRE_LIBS} ${X_LIBS} -lX11 -lXext ${LIBS} ${X_EXTRA_LIBS}"
CFLAGS="$CFLAGS $X_CFLAGS"

AC_CYGWIN
if test -n "${CYGWIN}"; then
  AC_CHECK_LIB(wsock32,select)
  dnl correct a bug in cygwin: incorrect regex included in -lm
  LIBS="`echo ${LIBS} | sed -e 's/-lm//'`"
  LIBS="${LIBS} /lib/libregex.a -lm"
fi

dnl Checks for library functions.
dnl ============================
AC_FUNC_VPRINTF
AC_CHECK_HEADERS(string.h stdarg.h unistd.h sys/time.h utime.h sys/utime.h)
AC_CHECK_HEADERS(sys/select.h sys/utsname.h pwd.h signal.h windows.h)
AC_HEADER_TIME
AC_CHECK_FUNCS(strdup strstr strcasecmp strncasecmp)
AC_CHECK_FUNCS(strerror snprintf vsnprintf select signal)
AC_CHECK_FUNCS(uname gethostname)

AC_C_CONST

AC_OUTPUT(Makefile src/Makefile doc/Makefile) 


